--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>flashcard</title>
 </head>
+
+
+
 <body>
-<title>flashcard</title>
+
+
+    <main>
+
+        <footer>
+
+
+            
+        </footer>
+
+
+    </main>
+
+
 </body>
+
+
 </html>
