--- a/index.html
+++ b/index.html
@@ -14,14 +14,24 @@
 
     <main>
 
-        <footer>
+<section id="container">
 
 
-            
-        </footer>
+
+
+</section>
 
 
     </main>
+
+        <footer>
+
+            <p>projeto desenvolvido, sem fins lucrativos </p>
+
+        </footer>
+
+
+    
 
 
 </body>
