--- a/index.html
+++ b/index.html
@@ -17,30 +17,46 @@
         <section id="container">
 
             <article class="cartao">
+
                 <div class="cartao__conteudo">
-                        <h3>Programação</h3>
-                        <div class="cartao__conteudo__pergunta">
-                                O que é CSS?
-                        </div>
-                        <div class="cartao__conteudo__resposta">
-                                O CSS é uma linguagem de estilização
-                        </div>
-                </div>
-        </article>
 
-        
-        <article class="cartao">
-            <div class="cartao__conteudo">
                     <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                            O que é CSS?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                            O CSS é uma linguagem de estilização
-                    </div>
-            </div>
-    </article>
 
+                    <div class="cartao__conteudo__pergunta">
+
+                        O que é CSS?
+
+                    </div>
+
+                    <div class="cartao__conteudo__resposta">
+
+                        O CSS é uma linguagem de estilização
+
+                    </div>
+                </div>
+            </article>
+
+
+            <article class="cartao">
+
+                <div class="cartao__conteudo">
+
+                    <h3>Programação</h3>
+
+                    <div class="cartao__conteudo__pergunta">
+
+                        O que é CSS?
+
+                    </div>
+
+                    <div class="cartao__conteudo__resposta">
+
+                        O CSS é uma linguagem de estilização
+
+                    </div>
+                </div>
+            </article>
+<div class=""></div>
 
 
 
